added images folder

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                 <li>German - B2</li>
             </ul>
         </section>
+        <section class="footer">
+            <p>GitHub: <a href="https://github.com/GoriNeoRage">GoriNeoRage</a></p>
+            <p>27.11.2023</p>
+            <a href="https://rs.school/"><img src="" alt="rsschool"></a>
+        </section>
 </body>
 
 </html>
