--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -61,10 +62,13 @@
                 <li>German - B2</li>
             </ul>
         </section>
+
+        <hr class="solid">
+
         <section class="footer">
             <p>GitHub: <a href="https://github.com/GoriNeoRage">GoriNeoRage</a></p>
             <p>27.11.2023</p>
-            <a href="https://rs.school/"><img src="" alt="rsschool"></a>
+            <a href="https://rs.school/"><img src="images/logo-rsschool3.png" alt="rsschool"></a>
         </section>
 </body>
 
