added updates to index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Contacts:</h2>
             <p>GitHub: <a href="https://github.com/GoriNeoRage">GoriNeoRage</a></p>
             <p>E-mail: <a href="mailto:lina.sushylova@gmail.com">lina.sushylova@gmail.com</a></p>
-            <p>Tel: <a href="tel:+34 0000000">+34 0000000</a></p>
+            <p>Tel: <a href="tel:+34 0000000">+34 089-09-09</a></p>
         </section>
 
         <section class="summary">
@@ -70,6 +70,7 @@
             <p>27.11.2023</p>
             <a href="https://rs.school/"><img src="images/logo-rsschool3.png" alt="rsschool"></a>
         </section>
+    </div>
 </body>
 
 </html>
