fixed: issues in code

--- a/index.html
+++ b/index.html
@@ -10,66 +10,68 @@
 
 <body>
     <div class="wrapper">
-        <section class="header">
+        <header class="header">
             <h1>Alina Sushylova</h1>
-        </section>
+        </header>
+        <hr class="solid">
+        <main>
+            <section class="contacts">
+                <h2>Contacts:</h2>
+                <p>GitHub: <a href="https://github.com/GoriNeoRage">GoriNeoRage</a></p>
+                <p>E-mail: <a href="mailto:lina.sushylova@gmail.com">lina.sushylova@gmail.com</a></p>
+                <p>Tel: <a href="tel:+340980909">+34 089-09-09</a></p>
+            </section>
 
-        <section class="contacts">
-            <h2>Contacts:</h2>
-            <p>GitHub: <a href="https://github.com/GoriNeoRage">GoriNeoRage</a></p>
-            <p>E-mail: <a href="mailto:lina.sushylova@gmail.com">lina.sushylova@gmail.com</a></p>
-            <p>Tel: <a href="tel:+34 0000000">+34 089-09-09</a></p>
-        </section>
+            <section class="summary">
+                <h2>Summary:</h2>
+                <p>I am a UX/UI designer with 3 years of hands-on experience, adept at seamlessly blending the worlds of
+                    design and development. Equally comfortable working as a collaborative team member within companies
+                    or
+                    as an independent freelancer. Would like to try myself as a Frontend dev.</p>
+            </section>
 
-        <section class="summary">
-            <h2>Summary:</h2>
-            <p>I am a UX/UI designer with 3 years of hands-on experience, adept at seamlessly blending the worlds of
-                design and development. Equally comfortable working as a collaborative team member within companies or
-                as an independent freelancer. Would like to try myself as a Frontend dev.</p>
-        </section>
+            <section class="skills">
+                <h2>Skills:</h2>
+                <ul>
+                    <li>Figma</li>
+                    <li>Photoshop</li>
+                    <li>After Effects</li>
+                    <li>Premier Pro</li>
+                    <li>HTML/CSS/JS - <em>basic</em></li>
+                </ul>
+            </section>
 
-        <section class="skills">
-            <h2>Skills:</h2>
-            <ul>
-                <li>Figma</li>
-                <li>Photoshop</li>
-                <li>After Effects</li>
-                <li>Premier Pro</li>
-                <li>HTML/CSS/JS - <em>basic</em></li>
-            </ul>
-        </section>
+            <section class="code">
+                <h2>Code:</h2>
+                <p>console.log('Hello everyone')</p>
+            </section>
 
-        <section class="code">
-            <h2>Code:</h2>
-            <p>console.log('Hello everyone')</p>
-        </section>
+            <section class="education">
+                <h2>Education:</h2>
+                <p>Odesa I. I. Mechnykov National University</p>
+            </section>
 
-        <section class="education">
-            <h2>Education:</h2>
-            <p>Odesa I. I. Mechnykov National University</p>
-        </section>
+            <section class="experience">
+                <h2>Experince:</h2>
+                <p>UX/UI designer (2019 - present)</p>
+            </section>
 
-        <section class="experience">
-            <h2>Experince:</h2>
-            <p>UX/UI designer (2019 - present)</p>
-        </section>
-
-        <section class="lang">
-            <h2>Languages:</h2>
-            <ul>
-                <li>English - C1</li>
-                <li>Ukrainian - C2</li>
-                <li>German - B2</li>
-            </ul>
-        </section>
-
+            <section class="lang">
+                <h2>Languages:</h2>
+                <ul>
+                    <li>English - C1</li>
+                    <li>Ukrainian - C2</li>
+                    <li>German - B2</li>
+                </ul>
+            </section>
+        </main>
         <hr class="solid">
 
-        <section class="footer">
+        <footer class="footer">
             <p>GitHub: <a href="https://github.com/GoriNeoRage">GoriNeoRage</a></p>
             <p>27.11.2023</p>
             <a href="https://rs.school/"><img src="images/logo-rsschool3.png" alt="rsschool"></a>
-        </section>
+        </footer>
     </div>
 </body>
 
