--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <nav>
-
+            <a href="">
+                <img src="img/logo.svg" alt="logo">
+            </a>
             <ul>
                 <li> <a href=""></a>Favorite coffee</li>
                 <li> <a href=""></a>About</li>
@@ -26,6 +28,7 @@
             <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
                 destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
                 beverage.</p>
+            <button type="submit">Menu</button>
         </section>
         <section class="fav_coffee">
             <h2>Choose your <span>favorite</span> coffee</h2>
@@ -34,9 +37,14 @@
             <h2>Resource is <span>the perfect and cozy place</span> where you can enjoy a variety of hot beverages,
                 relax, catch up
                 with friends, or get some work done.</h2>
+            <img src="./img/about-1.jpg" alt="about1">
+            <img src="./img/about-2.jpg" alt="about2">
+            <img src="./img/about-3.jpg" alt="about3">
+            <img src="./img/about-4.jpg" alt="about4">
         </section>
         <section class="mob_app">
             <h2><span>Download</span> our apps to start ordering</h2>
+            <img src="./img/mobile-screens.jpg" alt="mobile app">
         </section>
     </main>
     <footer>
