--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -10,44 +10,77 @@
 <body>
     <header>
         <nav>
-            <a href="">
-                <img src="img/logo.svg" alt="logo">
+            <a href="./index.html">
+                <img src="./img/logo.svg" alt="logo">
             </a>
             <ul>
-                <li> <a href=""></a>Favorite coffee</li>
-                <li> <a href=""></a>About</li>
-                <li> <a href=""></a>Mobile app</li>
-                <li> <a href=""></a>Contact us</li>
+                <li> <a href="#fav_coffee">Favorite coffee</a></li>
+                <li> <a href="#about">About</a></li>
+                <li> <a href="#mob_app">Mobile app</a></li>
+                <li> <a href="#contacts">Contact us</a></li>
             </ul>
         </nav>
         <button type="submit">Menu</button>
     </header>
+
     <main>
-        <section class="enjoy">
+        <section id="enjoy">
             <h1><span>Enjoy</span> premium coffee at our charming cafe</h1>
             <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
                 destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
                 beverage.</p>
             <button type="submit">Menu</button>
         </section>
-        <section class="fav_coffee">
+
+        <section id="fav_coffee">
             <h2>Choose your <span>favorite</span> coffee</h2>
+            <ul>
+                <li>
+                    <article>
+                        <img src="./img/coffee-slider-1.jpg" alt="frappuccino">
+                        <h3>S’mores Frappuccino</h3>
+                        <p>This new drink takes an espresso and mixes it with brown sugar and cinnamon before being
+                            topped with oat milk.</p>
+                        <h3>&dollar; 5.50</h3>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img src="./img/coffee-slider-2.jpg" alt="frappuccino">
+                        <h3>Caramel Macchiato</h3>
+                        <p>Fragrant and unique classic espresso with rich caramel-peanut syrup, with cream under whipped
+                            thick foam.</p>
+                        <h3>&dollar; 5.00</h3>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <img src="./img/coffee-slider-3.jpg" alt="frappuccino">
+                        <h3>Ice coffee</h3>
+                        <p>A popular summer drink that tones and invigorates. Prepared from coffee, milk and ice.</p>
+                        <h3>&dollar; 4.50</h3>
+                    </article>
+                </li>
+            </ul>
         </section>
-        <section class="about">
+
+        <section id="about">
             <h2>Resource is <span>the perfect and cozy place</span> where you can enjoy a variety of hot beverages,
                 relax, catch up
                 with friends, or get some work done.</h2>
-            <img src="./img/about-1.jpg" alt="about1">
+            <img src=" ./img/about-1.jpg" alt="about1">
             <img src="./img/about-2.jpg" alt="about2">
             <img src="./img/about-3.jpg" alt="about3">
             <img src="./img/about-4.jpg" alt="about4">
         </section>
-        <section class="mob_app">
+
+        <section id="mob_app">
             <h2><span>Download</span> our apps to start ordering</h2>
             <img src="./img/mobile-screens.jpg" alt="mobile app">
         </section>
     </main>
-    <footer>
+
+    <footer id="contacts">
         <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
 
         <h3>Contact us</h3>
