perf: styles added

--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee-house</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 
 <body>
@@ -21,20 +22,22 @@
                 <li> <a href="#contacts">Contact us</a></li>
             </ul>
         </nav>
-        <button type="submit">Menu</button>
+        <a href="./index.html">
+            Menu <img src="./img/coffee-cup.svg" alt="logo">
+        </a>
     </header>
 
     <main>
         <section id="enjoy">
-            <h1><span>Enjoy</span> premium coffee at our charming cafe</h1>
+            <h1 class="hero-title"><span class="accent">Enjoy</span> premium coffee at our charming cafe</h1>
             <p>With its inviting atmosphere and delicious coffee options, the Coffee House Resource is a popular
                 destination for coffee lovers and those seeking a warm and inviting space to enjoy their favorite
                 beverage.</p>
-            <button type="submit">Menu</button>
+            <button type="submit" class="btn">Menu <img src="./img/coffee-cup.svg" alt="logo" class="btn_img"></button>
         </section>
 
         <section id="fav_coffee">
-            <h2>Choose your <span>favorite</span> coffee</h2>
+            <h2 class="hero-title">Choose your <span class="accent">favorite</span> coffee</h2>
             <ul>
                 <li>
                     <article>
@@ -66,7 +69,9 @@
         </section>
 
         <section id="about">
-            <h2>Resource is <span>the perfect and cozy place</span> where you can enjoy a variety of hot beverages,
+            <h2 class="hero-title">Resource is <span class="accent">the perfect and cozy place</span> where you can
+                enjoy a variety of hot
+                beverages,
                 relax, catch up
                 with friends, or get some work done.</h2>
             <img src=" ./img/about-1.jpg" alt="about1">
@@ -76,13 +81,13 @@
         </section>
 
         <section id="mob_app">
-            <h2><span>Download</span> our apps to start ordering</h2>
+            <h2 class="hero-title"><span class="accent">Download</span> our apps to start ordering</h2>
             <img src="./img/mobile-screens.jpg" alt="mobile app">
         </section>
     </main>
 
     <footer id="contacts">
-        <h2>Sip, Savor, Smile. <span>It’s coffee time!</span></h2>
+        <h2 class="hero-title">Sip, Savor, Smile. <span class="accent">It’s coffee time!</span></h2>
 
         <h3>Contact us</h3>
         <nav>
