--- a/coffee-house/index.html
+++ b/coffee-house/index.html
@@ -143,7 +143,7 @@
     <footer id="contacts">
         <div class="container">
             <div class="footer_items">
-                <h2 class="hero-title sized">Sip, Savor, Smile. <br><span class="accent">It’s coffee time!</span></h2>
+                <h2 class="hero-title">Sip, Savor, Smile. <br><span class="accent">It’s coffee time!</span></h2>
                 <div class="footer_content">
                     <h3>Contact us</h3>
                     <nav>
